# Vollibrespot

./: .dockerignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  compile.sh
.circleci/: config.yml
src/: config.rs  config_parser.rs  event_hooks.rs  main.rs  meta_pipe.rs  player_event_handler.rs  version.rs
