[package]
name = "vollibrespot"
version = "0.1.9"
authors = ["ashthespy <https://github.com/ashthespy/>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "vollibrespot"
path = "src/main.rs"
doc = false

[dependencies]
env_logger =  {version = "0.6", default-features = false, features = ["termcolor","humantime","atty"]} 
futures = "0.1.28"
getopts = "0.2.19"
hyper = "0.12.32"
log = "0.4.6"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-signal = "0.2.7"
url = "2.1.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
sha-1 = "0.8.1"
hex = "0.3.2"
toml = "0.5.1"

[dependencies.librespot]
git = "https://github.com/ashthespy/librespot"
branch="vollibrespot"
# path = "../librespot"
default-features = false
features = ["alsa-backend"]

[build-dependencies]
vergen = "3.0.4"
